--- a/vue/style.css
+++ b/vue/style.css
@@ -36,7 +36,7 @@ body {
   letter-spacing: 1px;
 }
 
-.tableau th {
+.tableau th, td {
     background-color: rgb(230, 229, 229);
 }
 
@@ -55,14 +55,28 @@ body {
   transition-duration: 0.2s;
 }
 
-.display-flex {
+.div_flex_border-radius_blue-bg{
+    display: flex;
+    padding: 20px;
+    border: 3px solid rgb(10, 34, 113);
+    background-color: rgb(89, 161, 224);
+    border-radius: 5px;
+}
+
+.div_solid-border-radius {
+    padding: 20px;
+    border: 3px solid rgb(10, 34, 113);
+    border-radius: 5px;
+}
+
+.display-flex_justify-content {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   max-width: 100vw;
 }
 
-.display-flex a {
+.display-flex_justify-content a {
     text-decoration: none;
     color: black;
 }
@@ -80,6 +94,7 @@ body {
   display: flex;
   align-items: center;
   border-radius: 10px;
+  margin-bottom: 20px;
 }
 
 .navbar ul {
@@ -126,4 +141,9 @@ body {
   width: 350px;
   height: 200px;
   padding: 10px;
+}
+
+#icone-joueur-grand {
+    width:368px;
+    min-width: 368px;
 }
