--- a/vue/style.css
+++ b/vue/style.css
@@ -67,6 +67,8 @@ body {
     padding: 20px;
     border: 3px solid rgb(10, 34, 113);
     border-radius: 5px;
+    float: none;
+    overflow: hidden;
 }
 
 .display-flex_justify-content {
