--- a/vue/style.css
+++ b/vue/style.css
@@ -9,16 +9,14 @@ div {
 }
 
 body {
-    background-color: rgb(210, 231, 250);
+  background-color: rgb(210, 231, 250);
+    font-family: Arial, sans-serif;
+  padding: 20px;
 }
 
 .border-radius-5px_width-100px {
   border-radius: 5px;
   width: 100px;
-}
-
-.flex-1 {
-    flex:1;
 }
 
 .button-default {
@@ -40,8 +38,9 @@ body {
   letter-spacing: 1px;
 }
 
-.tableau th, td {
-    background-color: rgb(230, 229, 229);
+.tableau th,
+td {
+  background-color: rgb(230, 229, 229);
 }
 
 #carte-joueur {
@@ -59,20 +58,20 @@ body {
   transition-duration: 0.2s;
 }
 
-.div_flex_border-radius_blue-bg{
-    display: flex;
-    padding: 20px;
-    border: 3px solid rgb(10, 34, 113);
-    background-color: rgb(89, 161, 224);
-    border-radius: 5px;
+.div_flex_border-radius_blue-bg {
+  display: flex;
+  padding: 20px;
+  border: 3px solid rgb(10, 34, 113);
+  background-color: rgb(89, 161, 224);
+  border-radius: 5px;
 }
 
 .div_solid-border-radius {
-    padding: 20px;
-    border: 3px solid rgb(10, 34, 113);
-    border-radius: 5px;
-    float: none;
-    overflow: hidden;
+  padding: 20px;
+  border: 3px solid rgb(10, 34, 113);
+  border-radius: 5px;
+  float: none;
+  overflow: hidden;
 }
 
 .display-flex_justify-content {
@@ -83,8 +82,8 @@ body {
 }
 
 .display-flex_justify-content a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .list-no-style {
@@ -150,6 +149,32 @@ body {
 }
 
 #icone-joueur-grand {
-    width:368px;
-    min-width: 368px;
+  width: 368px;
+  min-width: 368px;
+}
+
+.stats-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+}
+
+.stat-box {
+  width: 150px;
+  height: 150px;
+  background-color: #f2f2f2;
+  border-radius: 10px;
+  text-align: center;
+  padding: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.stat-box h2 {
+  margin: 10px 0;
+  font-size: 36px;
+}
+
+.stat-box p {
+  margin: 0;
+  font-size: 18px;
 }
